@@ -1,14 +1,9 @@
 package com.example.quind.infrastructure.output.persistence;
 
-import com.example.quind.domain.model.Cliente;
+
 import com.example.quind.domain.model.Cuenta;
-import com.example.quind.domain.ports.ClientePortRepository;
 import com.example.quind.domain.ports.CuentaPortRepository;
-import com.example.quind.infrastructure.output.persistence.entity.ClienteEntity;
-import com.example.quind.infrastructure.output.persistence.entity.CuentaEntity;
-import com.example.quind.infrastructure.output.persistence.mapper.ClienteMapper;
 import com.example.quind.infrastructure.output.persistence.mapper.CuentaMapper;
-import com.example.quind.infrastructure.output.persistence.repository.ClienteRepository;
 import com.example.quind.infrastructure.output.persistence.repository.CuentaRepository;
 import lombok.RequiredArgsConstructor;
 
@@ -25,7 +20,7 @@ public class CuentaPersistenceAdapter implements CuentaPortRepository {
     public List<Cuenta> listar() {
         return cuentaRepository.findAll().stream()
                 .map(CuentaMapper::toCuenta)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -38,7 +33,7 @@ public class CuentaPersistenceAdapter implements CuentaPortRepository {
         return cuentaRepository.findByNumeroDeCuenta(numeroCuenta)
                 .stream()
                 .map(CuentaMapper::toCuenta)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -46,17 +41,12 @@ public class CuentaPersistenceAdapter implements CuentaPortRepository {
         return cuentaRepository.findByClienteId(clienteId)
                 .stream()
                 .map(CuentaMapper::toCuenta)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Cuenta guardar(Cuenta cuenta) {
         return CuentaMapper.toCuenta(cuentaRepository.save(CuentaMapper.toEntity(cuenta)));
-    }
-
-    @Override
-    public void eliminar(long id) {
-        cuentaRepository.deleteById(id);
     }
 
 }
